[project]
name            = "data-engineering-databricks"
version         = "0.1.0"
description     = "Local Databricks engineering workspace"
readme          = "README.md"
requires-python = ">=3.10"

dependencies = [
    "databricks-connect==15.4.*",
    "databricks-sdk>=0.49",
]

[project.optional-dependencies]
dev = [
    "pre-commit==4.2.0",
    "black",
    "pytest",
    "ruff",
    "isort",
]


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[tool.hatch.build]
include = [
    "*.py",
    "src/*.py",
]

[tool.ruff]
# Same as Black.
line-length = 90
# Assume Python 3.10
target-version = "py310"

# Enable Pyflakes (`F`) and a subset of the pycodestyle (`E`)  codes by default.
select = ["E", "F", "I001"]
ignore = ["F821", "E402"]

# Exclude a variety of commonly ignored directories.
exclude = [
    ".git",
    "__pycache__",
    "build",
    "dist",
    "setup.py",
]

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.black]
line-length = 90
target-version = ["py310"]

[tool.isort]
profile = "black"
multi_line_output = 3
